--- a/index.html
+++ b/index.html
@@ -1,203 +1,277 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maison à MENGLON</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            color: #333333;
-        }
-        header {
-            background-color: #ffffff;
-            padding: 20px;
-            text-align: center;
-        }
-        header h1, header p {
-            color: #ffcc00; /* Couleur jaune pour le titre et les informations principales */
-        }
-        nav.menu {
-            background-color: #666666;
-            padding: 10px;
-            display: flex;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-        nav.menu a {
-            color: white;
-            margin: 0 15px;
-            text-decoration: none;
-        }
-        .content {
-            margin: 20px;
-            background-color: #ffffff;
-            padding: 20px;
-            border-radius: 8px;
-        }
-        .content h2 {
-            color: #ffcc00; /* Couleur jaune pour les sous-titres */
-        }
-        .carousel {
-            position: relative;
-        }
-        .carousel img {
-            width: 100%;
-            height: auto;
-            display: block;
-        }
-        .carousel .prev, .carousel .next {
-            cursor: pointer;
-            position: absolute;
-            top: 50%;
-            width: auto;
-            padding: 16px;
-            margin-top: -22px;
-            color: white;
-            font-weight: bold;
-            font-size: 18px;
-            transition: 0.6s ease;
-            border-radius: 50%;
-            user-select: none;
-            background-color: rgba(0,0,0,0.5);
-        }
-        .carousel .prev {
-            left: 10px;
-        }
-        .carousel .next {
-            right: 10px;
-        }
-        .documents a {
-            display: flex;
-            align-items: center;
-            margin-bottom: 8px;
-            text-decoration: none;
-            color: #333333;
-        }
-        .documents img {
-            margin-right: 10px;
-            width: 36px; /* Adjust the width of the icon */
-            height: 36px; /* Adjust the height of the icon */
-        }
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f0f0f0;
+        color: #333333;
+      }
+      header {
+        background-color: #ffffff;
+        padding: 20px;
+        text-align: center;
+      }
+      header h1,
+      header p {
+        color: #ffcc00; /* Couleur jaune pour le titre et les informations principales */
+      }
+      nav.menu {
+        background-color: #666666;
+        padding: 10px;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
+      }
+      nav.menu a {
+        color: white;
+        margin: 0 15px;
+        text-decoration: none;
+      }
+      .content {
+        margin: 20px;
+        background-color: #ffffff;
+        padding: 20px;
+        border-radius: 8px;
+      }
+      .content h2 {
+        color: #ffcc00; /* Couleur jaune pour les sous-titres */
+      }
+      #a-propos p {
+        font-size: 18px; /* Augmentez la taille de la police */
+        line-height: 1.6; /* Améliorez l'espacement des lignes */
+        text-indent: 20px; /* Ajoutez une indentation au début de chaque paragraphe */
+        margin-bottom: 20px; /* Donnez un peu d'espace en dessous du paragraphe */
+        text-align: justify; /* Justifiez le texte */
+      }
+      .carousel {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .carousel img {
+        width: 70%;
+        height: auto;
+        display: block;
+      }
+      .carousel .prev,
+      .carousel .next {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        width: auto;
+        padding: 16px;
+        margin-top: -22px;
+        color: white;
+        font-weight: bold;
+        font-size: 18px;
+        transition: 0.6s ease;
+        border-radius: 50%;
+        user-select: none;
+        background-color: rgba(0, 0, 0, 0.5);
+      }
+      .carousel .prev {
+        left: 10px;
+      }
+      .carousel .next {
+        right: 10px;
+      }
+      .video-section {
+        text-align: left;
+      }
+
+      .video-section video {
+        width: 80%;
+        height: auto;
+        display: block;
+        margin: 0 auto; /* Centrer la vidéo horizontalement */
+      }
+
+      iframe {
+        display: block;
+        margin: 0 auto;
+      }
+      .documents a {
+        display: flex;
+        align-items: center;
+        margin-bottom: 8px;
+        text-decoration: none;
+        color: #333333;
+      }
+      .documents img {
+        margin-right: 10px;
+        width: 36px; /* Adjust the width of the icon */
+        height: 36px; /* Adjust the height of the icon */
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Maison à MENGLON</h1>
-        <p>MENGON - DIE</p>
-        <p>CYRILLE BOUVET au 06 22 85 16 39</p>
-        <p>Prix : 335 000 €</p>
+      <h1>Maison à MENGLON</h1>
+      <p>MENGON - DIE</p>
+      <p>CYRILLE BOUVET au 06 22 85 16 39</p>
+      <p>Prix : 335 000 €</p>
     </header>
     <nav class="menu">
-        <a href="#a-propos">Description</a>
-        <a href="#photos">Photos</a>
-        <a href="#video-interieur">Vidéo intérieur</a>
-        <a href="#video-exterieur">Vidéo extérieur</a>
-        <a href="#vue-aerienne">Vue aérienne</a>
-        <a href="#cadastre">Cadastre</a>
-        <a href="#details-techniques">Details</a>
-        <a href="#dpe">DPE</a>
-        <a href="#elements-supplementaires">Documents</a>
+      <a href="#a-propos">Description</a>
+      <a href="#photos">Photos</a>
+      <a href="#video-interieur">Vidéo intérieur</a>
+      <a href="#video-exterieur">Vidéo extérieur</a>
+      <a href="#vue-aerienne">Vue aérienne</a>
+      <a href="#cadastre">Cadastre</a>
+      <a href="#details-techniques">Details</a>
+      <a href="#dpe">DPE</a>
+      <a href="#elements-supplementaires">Documents</a>
     </nav>
     <div class="content">
-        <section id="a-propos">
-            <h2>A propos</h2>
-            <p id="a-propos-content"></p>
-        </section>
-        <section id="photos">
-            <h2>Photos</h2>
-            <div class="carousel">
-                <img src="photos/1.jpeg" alt="Photo 1">
-                <img src="photos/2.jpeg" alt="Photo 2" style="display:none;">
-                <img src="photos/3.jpeg" alt="Photo 3" style="display:none;">
-                <!-- Ajoutez autant de photos que nécessaire -->
-                <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
-                <a class="next" onclick="changeSlide(1)">&#10095;</a>
-            </div>
-        </section>
-        <section id="video-interieur">
-            <h2>Vidéo Intérieur</h2>
-            <video controls>
-                <source src="videos/video_interieur.mp4" type="video/mp4">
-                Votre navigateur ne supporte pas les vidéos HTML5.
-            </video>
-        </section>
-        <section id="video-exterieur">
-            <h2>Vidéo Extérieur</h2>
-            <video controls>
-                <source src="videos/video_exterieur.mp4" type="video/mp4">
-                Votre navigateur ne supporte pas les vidéos HTML5.
-            </video>
-        </section>
-        <section id="vue-aerienne">
-            <h2>Vue aérienne</h2>
-            <iframe src="https://www.google.com/maps/d/embed?mid=1TZA3Wp5mBQud6zK9DLlOcThaJnGN-ZM&ehbc=2E312F" width="640" height="480"></iframe>
-        </section>
-        <section id="cadastre">
-            <h2>Cadastre</h2>
-            <img src="cadastre/cadastre.jpg" alt="Cadastre">
-        </section>
-        <section id="details-techniques">
-            <h2>Details techniques</h2>
-            <p>Répartition des pièces : rez-de-chaussée avec un hall d’entrée...</p>
-        </section>
-        <section id="dpe">
-            <h2>Diagnostic de performance énergétique</h2>
-            <img src="dpe/dpe.jpg" alt="DPE">
-        </section>
-        <section id="elements-supplementaires">
-            <h2>Documents</h2>
-            <div class="documents">
-                <a href="documents/diagnostics.pdf">
-                    <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24">
-                    Diagnostic Amiante
-                </a>
-                <a href="documents/croquis.pdf">
-                    <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24">
-                    Croquis
-                </a>
-                <a href="documents/diagnostic_energetique.pdf">
-                    <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24">
-                    Diagnostic Energétique
-                </a>
-                <a href="documents/diagnostic_electricite.pdf">
-                    <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24">
-                    Diagnostic Électricité
-                </a>
-                <a href="documents/document.pdf">
-                    <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24">
-                    Document
-                </a>
-                <a href="documents/diagnostic_plomb.pdf">
-                    <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24">
-                    Diagnostic Plomb
-                </a>
-            </div>
-        </section>
+      <section id="a-propos">
+        <h2>A propos</h2>
+        <p>
+          RARE : Cette ancienne maison de maître datant du XIXe siècle servait
+          d’habitation au prêtre du village mais était également un lieu
+          d’accueil et d’échange. Construite en pierres locales, elle lui
+          confère une grande solidité et une bonne inertie thermique. Son
+          architecture est élégante et symétrique. Une particularité rend cette
+          demeure unique : une source traverse l’une des caves en longeant le
+          mur extérieur. En construisant volontairement la maison près de l’eau,
+          les bâtisseurs ont voulu symboliser l’abondance et la fertilité.
+          Idéalement disposée, son orientation vers le Sud lui apporte lumière
+          et chaleur. Ouverte sur
+        </p>
+      </section>
+      <section id="photos">
+        <h2>Photos</h2>
+        <div class="carousel">
+          <img src="photos/1.jpeg" alt="Photo 1" />
+          <img src="photos/2.jpeg" alt="Photo 2" style="display: none" />
+          <img src="photos/3.jpeg" alt="Photo 3" style="display: none" />
+          <img src="photos/4.jpeg" alt="Photo 3" style="display: none" />
+          <img src="photos/5.jpeg" alt="Photo 3" style="display: none" />
+          <img src="photos/6.jpeg" alt="Photo 3" style="display: none" />
+          <img src="photos/7.jpeg" alt="Photo 3" style="display: none" />
+          <!-- Ajoutez autant de photos que nécessaire -->
+          <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
+          <a class="next" onclick="changeSlide(1)">&#10095;</a>
+        </div>
+      </section>
+      <section id="video-interieur" class="video-section">
+        <h2>Vidéo Intérieur</h2>
+        <video controls>
+          <source src="videos/video_interieur.mp4" type="video/mp4" />
+        </video>
+      </section>
+      <section id="video-exterieur" class="video-section">
+        <h2>Vidéo Extérieur</h2>
+        <video controls>
+          <source src="videos/video_exterieur.mp4" type="video/mp4" />
+        </video>
+      </section>
+      <section id="vue-aerienne">
+        <h2>Vue aérienne</h2>
+        <iframe
+          src="https://www.google.com/maps/d/embed?mid=1TZA3Wp5mBQud6zK9DLlOcThaJnGN-ZM&ehbc=2E312F"
+          width="1000"
+          height="600"
+        ></iframe>
+      </section>
+      <section id="cadastre">
+        <h2>Cadastre</h2>
+        <img src="cadastre/cadastre.jpg" alt="Cadastre" />
+      </section>
+      <section id="details-techniques">
+        <h2>Details techniques</h2>
+        <p>Répartition des pièces : rez-de-chaussée avec un hall d’entrée...</p>
+      </section>
+      <section id="dpe">
+        <h2>Diagnostic de performance énergétique</h2>
+        <img src="dpe/dpe.jpg" alt="DPE" />
+      </section>
+      <section id="elements-supplementaires">
+        <h2>Documents</h2>
+        <div class="documents">
+          <a href="documents/diagnostics.pdf">
+            <img
+              src="icones/pdf_icone.png"
+              alt="PDF Icon"
+              width="24"
+              height="24"
+            />
+            Diagnostics
+          </a>
+          <a href="documents/croquis.pdf">
+            <img
+              src="icones/pdf_icone.png"
+              alt="PDF Icon"
+              width="24"
+              height="24"
+            />
+            Croquis
+          </a>
+          <a href="documents/Géolocalisation.pdf">
+            <img
+              src="icones/pdf_icone.png"
+              alt="PDF Icon"
+              width="24"
+              height="24"
+            />
+            Géolocalisation
+          </a>
+          <a href="documents/Caractéristiques techniques.pdf">
+            <img
+              src="icones/pdf_icone.png"
+              alt="PDF Icon"
+              width="24"
+              height="24"
+            />
+            Caractéristiques techniques
+          </a>
+          <a href="documents/division parcellaire.pdf">
+            <img
+              src="icones/pdf_icone.png"
+              alt="PDF Icon"
+              width="24"
+              height="24"
+            />
+            Division parcellaire
+          </a>
+          <a href="documents/audit.pdf">
+            <img
+              src="icones/pdf_icone.png"
+              alt="PDF Icon"
+              width="24"
+              height="24"
+            />
+            Audit
+          </a>
+        </div>
+      </section>
     </div>
 
     <script>
-        let currentSlide = 0;
-        const slides = document.querySelectorAll('.carousel img');
+      let currentSlide = 0;
+      const slides = document.querySelectorAll(".carousel img");
 
-        function changeSlide(n) {
-            slides[currentSlide].style.display = 'none';
-            currentSlide = (currentSlide + n + slides.length) % slides.length;
-            slides[currentSlide].style.display = 'block';
-        }
+      function changeSlide(n) {
+        slides[currentSlide].style.display = "none";
+        currentSlide = (currentSlide + n + slides.length) % slides.length;
+        slides[currentSlide].style.display = "block";
+      }
 
-                // Function to load text from a file and display it in an element
-        function loadTextFromFile(filePath, elementId) {
-            fetch(filePath)
-                .then(response => response.text())
-                .then(text => {
-                    document.getElementById(elementId).innerText = text;
-                });
-        }
+      // Function to load text from a file and display it in an element
+      function loadTextFromFile(filePath, elementId) {
+        fetch(filePath)
+          .then((response) => response.text())
+          .then((text) => {
+            document.getElementById(elementId).innerText = text;
+          });
+      }
 
-        // Load text for the "A propos" section
-        loadTextFromFile('text/a-propos.txt', 'a-propos-content');
+      // Load text for the "A propos" section
+      loadTextFromFile("text/a-propos.txt", "a-propos-content");
     </script>
-</body>
+  </body>
 </html>
