--- a/index1.html
+++ b/index1.html
@@ -68,7 +68,7 @@
       </section>
       <section id="cadastre">
         <h2>Cadastre</h2>
-        <img src="cadastre/cadastre.jpg" alt="Cadastre" />
+        <img src="cadastre bdp.png" alt="Cadastre" style="max-width: 100%; height: auto;" />
       </section>
       <section id="details-techniques">
         <h2>Details techniques</h2>
