--- a/index1.html
+++ b/index1.html
@@ -70,10 +70,27 @@
         <h2>Cadastre</h2>
        <img src="photos/cadastre bdp.png" alt="Cadastre" />
       </section>
-      <section id="details-techniques">
-        <h2>Details techniques</h2>
-        <p>Répartition des pièces : rez-de-chaussée avec un hall d’entrée...</p>
-      </section>
+    <section id="details-techniques">
+    <h2>Détails Techniques</h2>
+    <ul>
+        <li><strong>Année de construction :</strong> Avant 1900</li>
+        <li><strong>Année d’achat :</strong> 2010</li>
+        <li><strong>Matériaux de construction :</strong> Pierre</li>
+        <li><strong>Assainissement :</strong> Tout à l’égout</li>
+        <li><strong>Huisseries :</strong> Fenêtres : bois/PVC - Baie : aluminium</li>
+        <li><strong>Fenêtres de toit :</strong> Bois peint</li>
+        <li><strong>Superficie habitable :</strong> 85 m² maison principale + 28 m² studio</li>
+        <li><strong>Surface extérieure :</strong> 70 m²</li>
+        <li><strong>Superficie cadastrale :</strong> 140 m²</li>
+        <li><strong>Nombre de chambres :</strong> Maison principale - 3 / Studio - 1</li>
+        <li><strong>Garage :</strong> Oui - 26 m²</li>
+        <li><strong>Dépendance :</strong> Atelier sous une des terrasses (12 m²), Cave/sous-sol aménagé (17 m²)</li>
+        <li><strong>Mode de chauffage :</strong> Chaudière au gaz à ventouse / Poêle à bois tubé</li>
+        <li><strong>Coût annuel de l’électricité :</strong> 2 011 € pour 4 personnes</li>
+        <li><strong>Taxe foncière :</strong> 1 396 €</li>
+        <li><strong>Autres informations :</strong> Partie studio - finitions à anticiper</li>
+    </ul>
+</section>
       <section id="dpe">
         <h2>Diagnostic de performance énergétique</h2>
         <img src="dpe/dpe.jpg" alt="DPE" />
