--- a/index1.html
+++ b/index1.html
@@ -91,10 +91,10 @@
         <li><strong>Autres informations :</strong> Partie studio - finitions à anticiper</li>
     </ul>
 </section>
-      <section id="dpe">
-        <h2>Diagnostic de performance énergétique</h2>
-        <img src="dpe/dpe.jpg" alt="DPE" />
-      </section>
+   <section id="dpe">
+    <h2>Diagnostic de Performance Énergétique</h2>
+    <img src="photos/DPE.jpeg" alt="DPE" style="max-width: 100%; height: auto;" />
+</section>
       <section id="elements-supplementaires">
         <h2>Documents</h2>
         <div class="documents">
