--- a/index1.html
+++ b/index1.html
@@ -102,6 +102,10 @@
             <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
             Diagnostics
           </a>
+           <a href="documents/audit.pdf">
+            <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
+            Audit
+          </a>
           <a href="documents/croquis.pdf">
             <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
             Croquis
@@ -110,17 +114,9 @@
             <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
             Vue aérienne
           </a>
-          <a href="documents/Caractéristiques techniques.pdf">
+          <a href="documents/devis.pdf">
             <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
-            Caractéristiques techniques
-          </a>
-          <a href="documents/division parcellaire.pdf">
-            <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
-            Division parcellaire
-          </a>
-          <a href="documents/audit.pdf">
-            <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
-            Audit
+            Devis
           </a>
         </div>
       </section>
