--- a/index1.html
+++ b/index1.html
@@ -93,7 +93,7 @@
 </section>
    <section id="dpe">
     <h2>Diagnostic de Performance Énergétique</h2>
-    <img src="photos/DPE.jpeg" alt="DPE" style="max-width: 100%; height: auto;" />
+    <img src="documents/DPE.jpg" alt="DPE" style="max-width: 100%; height: auto;" />
 </section>
       <section id="elements-supplementaires">
         <h2>Documents</h2>
