--- a/index1.html
+++ b/index1.html
@@ -45,6 +45,21 @@
           <img src="photos/5.jpeg" alt="Photo 3"  />
           <img src="photos/6.jpeg" alt="Photo 3" />
           <img src="photos/7.jpeg" alt="Photo 3"  />
+          <img src="photos/8.jpeg" alt="Photo 1" />
+          <img src="photos/9.jpeg" alt="Photo 2"/>
+          <img src="photos/10.jpeg" alt="Photo 3" />
+          <img src="photos/11.jpeg" alt="Photo 3"  />
+          <img src="photos/12.jpeg" alt="Photo 3"  />
+          <img src="photos/13.jpeg" alt="Photo 3" />
+          <img src="photos/14.jpeg" alt="Photo 3"  />
+          <img src="photos/15.jpeg" alt="Photo 2"/>
+          <img src="photos/16.jpeg" alt="Photo 3" />
+          <img src="photos/17.jpeg" alt="Photo 3"  />
+          <img src="photos/18.jpeg" alt="Photo 3"  />
+          <img src="photos/19.jpeg" alt="Photo 3" />
+          <img src="photos/20.jpeg" alt="Photo 3"  />
+          <img src="photos/21.jpeg" alt="Photo 3" />
+          <img src="photos/22.jpeg" alt="Photo 3"  />
           <!-- Ajoutez autant de photos que nécessaire -->
           <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
           <a class="next" onclick="changeSlide(1)">&#10095;</a>
