--- a/index1.html
+++ b/index1.html
@@ -76,7 +76,7 @@ Un appartement indépendant de 28m2 constitue un bel atout supplémentaire, idé
       <section id="cadastre">
         <h2>Cadastre</h2>
 <div style="display: flex; justify-content: center; align-items: center;">
-  <img src="photos/cadastre bdp.png" alt="Cadastre" style="max-width: 60%; height: auto;" />
+  <img src="documents/cadastre bdp.png" alt="Cadastre" style="max-width: 60%; height: auto;" />
 </div>
       </section>
     <section id="details-techniques">
