--- a/index1.html
+++ b/index1.html
@@ -4,84 +4,96 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Maison à MENGLON</title>
+  <title>Maison à BOURG-DE-PEAGE</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <header>
-      <div class="text-background">
-        <h1>Maison de ville avec cour intérieure et terrasses</h1>
-        <p>BOURG-DE-PEAGE</p>
-        <p>Cyrille BOUVET-06 22 85 16 39 / Yaël BORJA-07 51 62 09 13</p>
-        <p class="prix">234 000 €</p>
+  <header>
+    <div class="logo-container">
+      <img src="./logo.png" alt="Logo">
+    </div>
+    <div class="text-background">
+      <h1>Maison de ville avec cour intérieure et terrasses</h1>
+      <p>BOURG-DE-PEAGE</p>
+      <p>Cyrille BOUVET-06 22 85 16 39 / Yaël BORJA-07 51 62 09 13</p>
+      <p class="prix">234 000 €</p>
+    </div>
+  </header>
+  <nav class="menu">
+    <a href="#a-propos">Description</a>
+    <a href="#photos">Photos</a>
+    <a href="#video-interieur">Vidéo intérieur</a>
+    <a href="#video-exterieur">Vidéo extérieur</a>
+    <a href="#geolocalisation">Géolocalisation</a>
+    <a href="#cadastre">Cadastre</a>
+    <a href="#details-techniques">Details</a>
+    <a href="#dpe">DPE</a>
+    <a href="#elements-supplementaires">Documents</a>
+  </nav>
+  <div class="content">
+    <section id="a-propos">
+      <h2>A propos</h2>
+      <p>
+        Cette maison de ville en pierre est un véritable enchantement. Dès l’entrée, on est immédiatement saisi par le
+        charme de l’ancien, subtilement mêlé à des volumes plus contemporains. La vaste pièce de vie séduit par ses
+        boiseries chaleureuses, ses murs enduits, son élégant escalier métallique, et sa lumière généreuse offerte par
+        une large baie vitrée ouvrant sur une grande terrasse exposée au Sud. Une porte-fenêtre vous mène également vers
+        une seconde terrasse, ombragée et apaisante. Trois chambres, ainsi qu’un bureau aménagé en sous-sol, viennent
+        compléter les espaces de vie. À l’arrière de la maison, une cour intérieure, calme et à l’abri des regards,
+        offre un véritable havre de paix où les rayons du soleil dansent à travers le feuillage.
+        Un appartement indépendant de 28m2 constitue un bel atout supplémentaire, idéal pour un revenu locatif ou pour
+        accueillir vos proches en toute autonomie. Et pour parfaire l’ensemble, un garage, si rare en centre-ville, vous
+        garantit un stationnement facile au quotidien. </p>
+    </section>
+    <section id="photos">
+      <h2>Photos</h2>
+      <div class="carousel">
+        <img src="photos/1.jpeg" alt="Photo 1" />
+        <img src="photos/2.jpeg" alt="Photo 2" />
+        <img src="photos/3.jpeg" alt="Photo 3" />
+        <img src="photos/4.jpeg" alt="Photo 3" />
+        <img src="photos/5.jpeg" alt="Photo 3" />
+        <img src="photos/6.jpeg" alt="Photo 3" />
+        <img src="photos/7.jpeg" alt="Photo 3" />
+        <img src="photos/8.jpeg" alt="Photo 1" />
+        <img src="photos/9.jpeg" alt="Photo 2" />
+        <img src="photos/10.jpeg" alt="Photo 3" />
+        <img src="photos/11.jpeg" alt="Photo 3" />
+        <img src="photos/12.jpeg" alt="Photo 3" />
+        <img src="photos/13.jpeg" alt="Photo 3" />
+        <img src="photos/14.jpeg" alt="Photo 3" />
+        <img src="photos/15.jpeg" alt="Photo 2" />
+        <img src="photos/16.jpeg" alt="Photo 3" />
+        <img src="photos/17.jpeg" alt="Photo 3" />
+        <img src="photos/18.jpeg" alt="Photo 3" />
+        <img src="photos/19.jpg" alt="Photo 3" />
+        <img src="photos/20.jpeg" alt="Photo 3" />
+        <img src="photos/21.jpeg" alt="Photo 3" />
+        <img src="photos/22.jpeg" alt="Photo 3" />
+        <!-- Ajoutez autant de photos que nécessaire -->
+        <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
+        <a class="next" onclick="changeSlide(1)">&#10095;</a>
       </div>
-    </header>
-    <nav class="menu">
-      <a href="#a-propos">Description</a>
-      <a href="#photos">Photos</a>
-      <a href="#video-interieur">Vidéo intérieur</a>
-      <a href="#video-exterieur">Vidéo extérieur</a>
-      <a href="#geolocalisation">Géolocalisation</a>
-      <a href="#cadastre">Cadastre</a>
-      <a href="#details-techniques">Details</a>
-      <a href="#dpe">DPE</a>
-      <a href="#elements-supplementaires">Documents</a>
-    </nav>
-    <div class="content">
-      <section id="a-propos">
-        <h2>A propos</h2>
-        <p>
-Cette maison de ville en pierre est un véritable enchantement. Dès l’entrée, on est immédiatement saisi par le charme de l’ancien, subtilement mêlé à des volumes plus contemporains. La vaste pièce de vie séduit par ses boiseries chaleureuses, ses murs enduits, son élégant escalier métallique, et sa lumière généreuse offerte par une large baie vitrée ouvrant sur une grande terrasse exposée au Sud. Une porte-fenêtre vous mène également vers une seconde terrasse, ombragée et apaisante. Trois chambres, ainsi qu’un bureau aménagé en sous-sol, viennent compléter les espaces de vie. À l’arrière de la maison, une cour intérieure, calme et à l’abri des regards, offre un véritable havre de paix où les rayons du soleil dansent à travers le feuillage.
-Un appartement indépendant de 28m2 constitue un bel atout supplémentaire, idéal pour un revenu locatif ou pour accueillir vos proches en toute autonomie. Et pour parfaire l’ensemble, un garage, si rare en centre-ville, vous garantit un stationnement facile au quotidien.        </p>
-      </section>
-      <section id="photos">
-        <h2>Photos</h2>
-        <div class="carousel">
-          <img src="photos/1.jpeg" alt="Photo 1" />
-          <img src="photos/2.jpeg" alt="Photo 2"/>
-          <img src="photos/3.jpeg" alt="Photo 3" />
-          <img src="photos/4.jpeg" alt="Photo 3"  />
-          <img src="photos/5.jpeg" alt="Photo 3"  />
-          <img src="photos/6.jpeg" alt="Photo 3" />
-          <img src="photos/7.jpeg" alt="Photo 3"  />
-          <img src="photos/8.jpeg" alt="Photo 1" />
-          <img src="photos/9.jpeg" alt="Photo 2"/>
-          <img src="photos/10.jpeg" alt="Photo 3" />
-          <img src="photos/11.jpeg" alt="Photo 3"  />
-          <img src="photos/12.jpeg" alt="Photo 3"  />
-          <img src="photos/13.jpeg" alt="Photo 3" />
-          <img src="photos/14.jpeg" alt="Photo 3"  />
-          <img src="photos/15.jpeg" alt="Photo 2"/>
-          <img src="photos/16.jpeg" alt="Photo 3" />
-          <img src="photos/17.jpeg" alt="Photo 3"  />
-          <img src="photos/18.jpeg" alt="Photo 3"  />
-          <img src="photos/19.jpg" alt="Photo 3" />
-          <img src="photos/20.jpeg" alt="Photo 3"  />
-          <img src="photos/21.jpeg" alt="Photo 3" />
-          <img src="photos/22.jpeg" alt="Photo 3"  />
-          <!-- Ajoutez autant de photos que nécessaire -->
-          <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
-          <a class="next" onclick="changeSlide(1)">&#10095;</a>
-        </div>
-      </section>
-      <section id="video-interieur" class="video-section">
-        <h2>Vidéo Intérieur/Extérieur</h2>
-        <iframe src="https://www.youtube.com/embed/4Wsg2NjV5BI"></iframe>
-      </section>
-      <section id="geolocalisation">
-        <h2>Géolocalisation</h2>
-        <iframe src="https://www.google.com/maps/d/embed?mid=1Iz4XYN7175pe7IbmjV2W5xVqnhwgFJU&ll=45.03801438673739%2C5.053480899999991&z=18 "></iframe>
-      </section>
-      <section id="cadastre">
-        <h2>Cadastre</h2>
-<div style="display: flex; justify-content: center; align-items: center;">
-  <img src="documents/cadastre bdp.png" alt="Cadastre" style="max-width: 60%; height: auto;" />
-</div>
-      </section>
+    </section>
+    <section id="video-interieur" class="video-section">
+      <h2>Vidéo Intérieur/Extérieur</h2>
+      <iframe src="https://www.youtube.com/embed/4Wsg2NjV5BI"></iframe>
+    </section>
+    <section id="geolocalisation">
+      <h2>Géolocalisation</h2>
+      <iframe
+        src="https://www.google.com/maps/d/embed?mid=1Iz4XYN7175pe7IbmjV2W5xVqnhwgFJU&ll=45.03801438673739%2C5.053480899999991&z=18 "></iframe>
+    </section>
+    <section id="cadastre">
+      <h2>Cadastre</h2>
+      <div style="display: flex; justify-content: center; align-items: center;">
+        <img src="documents/cadastre bdp.png" alt="Cadastre" style="max-width: 60%; height: auto;" />
+      </div>
+    </section>
     <section id="details-techniques">
-    <h2>Détails Techniques</h2>
-    <ul>
+      <h2>Détails Techniques</h2>
+      <ul>
         <li><strong>Année de construction :</strong> Avant 1900</li>
         <li><strong>Année d’achat :</strong> 2010</li>
         <li><strong>Matériaux de construction :</strong> Pierre</li>
@@ -98,40 +110,40 @@ Un appartement indépendant de 28m2 constitue un bel atout supplémentaire, idé
         <li><strong>Coût annuel de l’électricité :</strong> 2 011 € pour 4 personnes</li>
         <li><strong>Taxe foncière :</strong> 1 396 €</li>
         <li><strong>Autres informations :</strong> Partie studio - finitions à anticiper</li>
-    </ul>
-</section>
-   <section id="dpe">
-    <h2>Diagnostic de Performance Énergétique</h2>
-    <div style="display: flex; justify-content: center; align-items: center;">
-      <img src="documents/DPE.jpg" alt="DPE" style="max-width: 40%; height: auto;" />
-    </div>
-</section>
-      <section id="elements-supplementaires">
-        <h2>Documents</h2>
-        <div class="documents">
-          <a href="documents/diagnostics.pdf">
-            <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
-            Diagnostics
-          </a>
-           <a href="documents/DDT-AUDIT.pdf">
-            <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
-            Audit
-          </a>
-          <a href="documents/croquis.pdf">
-            <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
-            Croquis
-          </a>
-          <a href="documents/vue aérienne.pdf">
-            <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
-            Vue aérienne
-          </a>
-          <a href="documents/Devis-KparK.pdf">
-            <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
-            Devis Porte garage
-          </a>
-        </div>
-      </section>
-    </div>
+      </ul>
+    </section>
+    <section id="dpe">
+      <h2>Diagnostic de Performance Énergétique</h2>
+      <div style="display: flex; justify-content: center; align-items: center;">
+        <img src="documents/DPE.jpg" alt="DPE" style="max-width: 40%; height: auto;" />
+      </div>
+    </section>
+    <section id="elements-supplementaires">
+      <h2>Documents</h2>
+      <div class="documents">
+        <a href="documents/diagnostics.pdf">
+          <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
+          Diagnostics
+        </a>
+        <a href="documents/DDT-AUDIT.pdf">
+          <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
+          Audit
+        </a>
+        <a href="documents/croquis.pdf">
+          <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
+          Croquis
+        </a>
+        <a href="documents/vue aérienne.pdf">
+          <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
+          Vue aérienne
+        </a>
+        <a href="documents/Devis-KparK.pdf">
+          <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
+          Devis Porte garage
+        </a>
+      </div>
+    </section>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/js-yaml@4.1.0/dist/js-yaml.min.js"></script>
   <script src="scripts.js"></script>
 </body>
