--- a/index1.html
+++ b/index1.html
@@ -4,146 +4,149 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Maison à BOURG-DE-PEAGE</title>
+  <title>Maison à Espenel</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <header>
-    <div class="logo-container">
-      <img src="./logo.png" alt="Logo">
-    </div>
-    <div class="text-background">
-      <h1>Maison de ville avec cour intérieure et terrasses</h1>
-      <p>BOURG-DE-PEAGE</p>
-      <p>Cyrille BOUVET-06 22 85 16 39 / Yaël BORJA-07 51 62 09 13</p>
-      <p class="prix">234 000 €</p>
-    </div>
-  </header>
-  <nav class="menu">
-    <a href="#a-propos">Description</a>
-    <a href="#photos">Photos</a>
-    <a href="#video-interieur">Vidéo intérieur</a>
-    <a href="#video-exterieur">Vidéo extérieur</a>
-    <a href="#geolocalisation">Géolocalisation</a>
-    <a href="#cadastre">Cadastre</a>
-    <a href="#details-techniques">Details</a>
-    <a href="#dpe">DPE</a>
-    <a href="#elements-supplementaires">Documents</a>
-  </nav>
-  <div class="content">
-    <section id="a-propos">
-      <h2>A propos</h2>
-      <p>
-        Cette maison de ville en pierre est un véritable enchantement. Dès l’entrée, on est immédiatement saisi par le
-        charme de l’ancien, subtilement mêlé à des volumes plus contemporains. La vaste pièce de vie séduit par ses
-        boiseries chaleureuses, ses murs enduits, son élégant escalier métallique, et sa lumière généreuse offerte par
-        une large baie vitrée ouvrant sur une grande terrasse exposée au Sud. Une porte-fenêtre vous mène également vers
-        une seconde terrasse, ombragée et apaisante. Trois chambres, ainsi qu’un bureau aménagé en sous-sol, viennent
-        compléter les espaces de vie. À l’arrière de la maison, une cour intérieure, calme et à l’abri des regards,
-        offre un véritable havre de paix où les rayons du soleil dansent à travers le feuillage.
-        Un appartement indépendant de 28m2 constitue un bel atout supplémentaire, idéal pour un revenu locatif ou pour
-        accueillir vos proches en toute autonomie. Et pour parfaire l’ensemble, un garage, si rare en centre-ville, vous
-        garantit un stationnement facile au quotidien. </p>
-    </section>
-    <section id="photos">
-      <h2>Photos</h2>
-      <div class="carousel">
-        <img src="photos/1.jpeg" alt="Photo 1" />
-        <img src="photos/2.jpeg" alt="Photo 2" />
-        <img src="photos/3.jpeg" alt="Photo 3" />
-        <img src="photos/4.jpeg" alt="Photo 3" />
-        <img src="photos/5.jpeg" alt="Photo 3" />
-        <img src="photos/6.jpeg" alt="Photo 3" />
-        <img src="photos/7.jpeg" alt="Photo 3" />
-        <img src="photos/8.jpeg" alt="Photo 1" />
-        <img src="photos/9.jpeg" alt="Photo 2" />
-        <img src="photos/10.jpeg" alt="Photo 3" />
-        <img src="photos/11.jpeg" alt="Photo 3" />
-        <img src="photos/12.jpeg" alt="Photo 3" />
-        <img src="photos/13.jpeg" alt="Photo 3" />
-        <img src="photos/14.jpeg" alt="Photo 3" />
-        <img src="photos/15.jpeg" alt="Photo 2" />
-        <img src="photos/16.jpeg" alt="Photo 3" />
-        <img src="photos/17.jpeg" alt="Photo 3" />
-        <img src="photos/18.jpeg" alt="Photo 3" />
-        <img src="photos/19.jpg" alt="Photo 3" />
-        <img src="photos/20.jpeg" alt="Photo 3" />
-        <img src="photos/21.jpeg" alt="Photo 3" />
-        <img src="photos/22.jpeg" alt="Photo 3" />
-        <!-- Ajoutez autant de photos que nécessaire -->
-        <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
-        <a class="next" onclick="changeSlide(1)">&#10095;</a>
+    <header>
+      <div class="logo-container">
+        <img src="./logo.png" alt="Logo">
       </div>
-    </section>
-    <section id="video-interieur" class="video-section">
-      <h2>Vidéo Intérieur/Extérieur</h2>
-      <iframe src="https://www.youtube.com/embed/4Wsg2NjV5BI"></iframe>
-    </section>
-    <section id="geolocalisation">
-      <h2>Géolocalisation</h2>
-      <iframe
-        src="https://www.google.com/maps/d/embed?mid=1Iz4XYN7175pe7IbmjV2W5xVqnhwgFJU&ll=45.03801438673739%2C5.053480899999991&z=18 "></iframe>
-    </section>
-    <section id="cadastre">
-      <h2>Cadastre</h2>
-      <div style="display: flex; justify-content: center; align-items: center;">
-        <img src="documents/cadastre bdp.png" alt="Cadastre" style="max-width: 60%; height: auto;" />
+      <div class="text-background">
+        <h1>Maison de plain-pied avec grand sous-sol</h1>
+        <p>ESPENEL</p>
+        <p>Cyrille BOUVET-06 22 85 16 39 / Yaël BORJA-07 51 62 09 13</p>
+        <p class="prix">280 000 €</p>
       </div>
-    </section>
+    </header>
+    <nav class="menu">
+      <a href="#a-propos">Description</a>
+      <a href="#photos">Photos</a>
+      <a href="#video-interieur">Vidéo intérieur</a>
+      <a href="#video-exterieur">Vidéo extérieur</a>
+      <a href="#geolocalisation">Géolocalisation</a>
+      <a href="#cadastre">Cadastre</a>
+      <a href="#Vue aérienne">Vue aérienne</a>
+      <a href="#details-techniques">Details</a>
+      <a href="#dpe">DPE</a>
+      <a href="#elements-supplementaires">Documents</a>
+    </nav>
+    <div class="content">
+      <section id="a-propos">
+        <h2>A propos</h2>
+        <p>
+Dans la vallée de la Drôme, entre Saillans et Die, sur la commune paisible d’Espenel, découvrez cette charmante maison construite dans les années 2000. 
+Bénéficiant d’un cadre tranquille et d’une vue imprenable sur les reliefs environnants, cette propriété a été soigneusement entretenue par son unique propriétaire.</p>
+<p>Implantée sur une parcelle arborée de 1 500 m², la maison vous surprendra dès l’entrée par ses hauts plafonds dans la pièce de vie, baignée de lumière tout au long de la journée grâce à ses nombreuses ouvertures. De plain-pied, elle offre deux chambres et une grande salle de bains, garantissant un confort de vie optimal au quotidien.</p> 
+<p>Vous apprécierez également le sous-sol complet, idéal pour le stockage, le rangement, ainsi que le stationnement de véhicules. La propriété bénéficie en prime d’un terrain jouxtant le ruisseau du Morina, un véritable atout pour vous rafraîchir lors des périodes les plus chaudes de l’année.</p>
+<p>Cette maison vous séduira par son charme naturel, ses possibilités de rangement et ses différents espaces extérieurs, parfaits pour profiter pleinement de la nature environnante.</p>
+</p>
+      </section>
+      <section id="photos">
+        <h2>Photos</h2>
+        <div class="carousel">
+          <img src="photos/1.jpeg" alt="Photo 1" />
+          <img src="photos/2.jpeg" alt="Photo 2"/>
+          <img src="photos/3.jpeg" alt="Photo 3" />
+          <img src="photos/4.jpeg" alt="Photo 3"  />
+          <img src="photos/5.jpeg" alt="Photo 3"  />
+          <img src="photos/6.jpeg" alt="Photo 3" />
+          <img src="photos/7.jpeg" alt="Photo 3"  />
+          <img src="photos/8.jpeg" alt="Photo 1" />
+          <img src="photos/9.jpeg" alt="Photo 2"/>
+          <img src="photos/10.jpeg" alt="Photo 3" />
+          <img src="photos/11.jpeg" alt="Photo 3"  />
+          <img src="photos/12.jpeg" alt="Photo 3"  />
+          <img src="photos/13.jpeg" alt="Photo 3" />
+          <img src="photos/14.jpeg" alt="Photo 3"  />
+          <img src="photos/16.jpeg" alt="Photo 3" />
+          <img src="photos/18.jpeg" alt="Photo 3"  />
+          <img src="photos/19.jpeg" alt="Photo 3" />
+          <img src="photos/20.jpeg" alt="Photo 3"  />
+          <img src="photos/21.jpeg" alt="Photo 3" />
+          <img src="photos/22.jpeg" alt="Photo 3"  />
+          <img src="photos/23.jpeg" alt="Photo 3"  />
+          <!-- Ajoutez autant de photos que nécessaire -->
+          <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
+          <a class="next" onclick="changeSlide(1)">&#10095;</a>
+        </div>
+      </section>
+      <section id="video-interieur" class="video-section">
+        <h2>Vidéo Intérieur</h2>
+        <iframe src="https://www.youtube.com/embed/HuxSydGOxbg"></iframe>
+      </section>
+       <section id="video-exterieur" class="video-section">
+        <h2>Vidéo Extérieur</h2>
+         <iframe src="https://www.youtube.com/embed/BeX_fxXNnvw"></iframe>
+        </video>
+      </section>
+      <section id="geolocalisation">  
+        <h2>Géolocalisation</h2>
+        <iframe src="https://www.google.com/maps/d/embed?hl=fr&mid=1SjCFll_f5m3jGeTJ3t07iYqidFKYvGY&ll=44.6839820570202%2C5.228676699654149&z=19"></iframe>
+      </section>
+      <section id="cadastre">
+        <h2>Cadastre</h2>
+<div style="display: flex; justify-content: center; align-items: center;">
+  <img src="documents/cadastre.png"alt="Cadastre" style="max-width: 60%; height: auto;" />
+</div>
+      </section>
+      <section id="Vue aérienne">
+        <h2>Vue aérienne</h2>
+<div style="display: flex; justify-content: center; align-items: center;">
+  <img src="documents/vue-aerienne espenel.jpg.png"alt="Cadastre" style="max-width: 60%; height: auto;" />
+</div>
+      </section>
     <section id="details-techniques">
-      <h2>Détails Techniques</h2>
-      <ul>
-        <li><strong>Année de construction :</strong> Avant 1900</li>
-        <li><strong>Année d’achat :</strong> 2010</li>
-        <li><strong>Matériaux de construction :</strong> Pierre</li>
-        <li><strong>Assainissement :</strong> Tout à l’égout</li>
-        <li><strong>Huisseries :</strong> Fenêtres : bois/PVC - Baie : aluminium</li>
-        <li><strong>Fenêtres de toit :</strong> Bois peint</li>
-        <li><strong>Superficie habitable :</strong> 85 m² maison principale + 28 m² studio</li>
-        <li><strong>Surface extérieure :</strong> 70 m²</li>
-        <li><strong>Superficie cadastrale :</strong> 140 m²</li>
-        <li><strong>Nombre de chambres :</strong> Maison principale - 3 / Studio - 1</li>
-        <li><strong>Garage :</strong> Oui - 26 m²</li>
-        <li><strong>Dépendance :</strong> Atelier sous une des terrasses (12 m²), Cave/sous-sol aménagé (17 m²)</li>
-        <li><strong>Mode de chauffage :</strong> Chaudière au gaz à ventouse / Poêle à bois tubé</li>
-        <li><strong>Coût annuel de l’électricité :</strong> 2 011 € pour 4 personnes</li>
-        <li><strong>Taxe foncière :</strong> 1 396 €</li>
-        <li><strong>Autres informations :</strong> Partie studio - finitions à anticiper</li>
-      </ul>
-    </section>
-    <section id="dpe">
-      <h2>Diagnostic de Performance Énergétique</h2>
-      <div style="display: flex; justify-content: center; align-items: center;">
-        <img src="documents/DPE.jpg" alt="DPE" style="max-width: 40%; height: auto;" />
-      </div>
-    </section>
-    <section id="elements-supplementaires">
-      <h2>Documents</h2>
-      <div class="documents">
-        <a href="documents/diagnostics.pdf">
-          <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
-          Diagnostics
-        </a>
-        <a href="documents/DDT-AUDIT.pdf">
-          <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
-          Audit
-        </a>
-        <a href="documents/croquis.pdf">
-          <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
-          Croquis
-        </a>
-        <a href="documents/vue aérienne.pdf">
-          <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
-          Vue aérienne
-        </a>
-        <a href="documents/Devis-KparK.pdf">
-          <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
-          Devis Porte garage
-        </a>
-      </div>
-    </section>
-  </div>
+    <h2>Détails Techniques</h2>
+    <ul>
+        <li><strong>Année de construction :</strong> 2000</li>
+        <li><strong>Année d’achat :</strong> 2000</li>
+        <li><strong>Matériaux de construction :</strong> Béton banché sur la partie sous-sol + parpaing avec brique</li>
+        <li><strong>Isolation :</strong> laine de verre 100mm/ isolation polystyrène par le sous-sol au profit du niveau supérieur</li>
+        <li><strong>Toiture:</strong> Charpente traditionnelle</li>
+        <li><strong>Assainissement :</strong> Individuel - diagnostic en cours</li>
+        <li><strong>Huisseries :</strong> Fenêtres : PVC - Baie : PVC</li>
+        <li><strong>Volets :</strong> PVC - volet roulant éléectrique pour la baie vitrée</li>
+        <li><strong>Superficie habitable :</strong> 77 m2</li>
+        <li><strong>Surface extérieure :</strong> 2 197 m² (1 508 + 304 + 385)</li>
+        <li><strong>Nombre de chambres :</strong> 2</li>
+        <li><strong>Garage/ Sous-sol :</strong> 77 m²</li>
+        <li><strong>Mode de chauffage :</strong> Chaudière gaz très haute performance énergétique (changée en 2020) chauffage par le sol (eau chaude) Poêle à bois installé fin 2023</li>
+        <li><strong>Coût annuel du chauffage :</strong> GAZ : environ 50€/mois (moyenne depuis l'installation) - BOIS : 4 à 5 stères par an</li>
+        <li><strong>Coût annuel de l’électricité :</strong> 900 € pour 2024</li>
+        <li><strong>Taxe foncière :</strong> 531 €</li>
+        <li><strong>Autres informations :</strong> Portail de garage éléctrique / possibilité d'agrandissement de la maison</li>
+    </ul>
+</section>
+   <section id="dpe">
+    <h2>Diagnostic de Performance Énergétique</h2>
+    <div style="display: flex; justify-content: center; align-items: center;">
+      <img src="documents/DPE.jpg" alt="DPE" style="max-width: 40%; height: auto;" />
+    </div>
+</section>
+      <section id="elements-supplementaires">
+        <h2>Documents</h2>
+        <div class="documents">
+          <a href="documents/DDT.pdf">
+            <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
+            Diagnostics
+          </a>
+           <a href="documents/ERP.pdf">
+            <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
+            ERP
+          </a>
+          <a href="documents/PLAN MAISON_000006.pdf">
+            <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
+            Croquis
+          </a>
+          <a href="">
+            <img src="icones/pdf_icone.png" alt="PDF Icon" width="24" height="24" />
+            Diagnostic assainissement individuel
+          </a>
+        </div>
+      </section>  
+    </div>
   <script src="https://cdn.jsdelivr.net/npm/js-yaml@4.1.0/dist/js-yaml.min.js"></script>
   <script src="scripts.js"></script>
 </body>
